# ai-course-summary

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: celery_app.py  dependencies.py  main.py  models.py  protocols.py
app/alembic/versions/: 28308e1e2991_added_user_and_course_tables.py  4d1384156f0c_update_user_model_with_authentication_.py  f3f86b3325fd_add_batch_tables.py
app/core/: config.py
app/crud/: __init__.py  auth.py  batch.py  courses.py  users.py
app/internal/: __init__.py
app/routers/: __init__.py  auth.py  batch.py  courses.py  users.py
app/services/: llm.py
app/tasks/: __init__.py  batch_tasks.py
