[project]
name = "AI_Summary"
version = "0.1.0"
description = "AI-Powered Online Course Summary Generator"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "alembic>=1.15.2",
    "fastapi[standard]>=0.115.12",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "sqlmodel>=0.0.24",
]
