[project]
name = "AI_Summary"
version = "0.1.0"
description = "AI-Powered Online Course Summary Generator"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "alembic>=1.15.2",
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.6",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
]
